samples/_failures_safe/1761336011_472288_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37f1094f.c: In function ‘main’:
./samples/SAFE/__tmp_37f1094f.c:143:25: error: missing terminating " character
  143 |         fprintf(stderr, "Failed to add compression block
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_37f1094f.c:143:9: error: expected expression at end of input
  143 |         fprintf(stderr, "Failed to add compression block
      |         ^~~~~~~
./samples/SAFE/__tmp_37f1094f.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37f1094f.c:143:9: error: expected declaration or statement at end of input
